Closed Bug 895242 Opened 12 years ago Closed 12 years ago

vm/Shape.h(1103) : warning C4805: '|' : unsafe mix of type 'uintptr_t' and type 'bool' in operation (VS 2010)

Categories

(Core :: JavaScript Engine, defect)

x86_64
Windows 8
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla25

People

(Reporter: masayuki, Unassigned)

Details

When I build with VS 2010, I can see a lot of warning. vm/Shape.h(1103) : warning C4805: '|' : unsafe mix of type 'uintptr_t' and type 'bool' in operation http://mxr.mozilla.org/mozilla-central/source/js/src/vm/Shape.h#1102
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla25
You need to log in before you can comment on or make changes to this bug.