Bug 895242 - Cast a bool-valued expression to uintptr_t, so that the bitwise-or expression containing it doesn't trigger compiler warnings on Windows.  r=trivial